==> micropython/micropython/ports/nrf/bluetooth/bluetooth.c <==
#include <stdio.h>
#include <string.h>
#include "py/runtime.h"
#include "py/mperrno.h"
#include "extmod/modbluetooth.h"
#include "drivers/flash.h"
#include "nrf_sdm.h"
#include "ble.h"
#include "nrf_nvic.h"
#define MSEC_TO_UNITS(TIME, RESOLUTION) (((TIME) * 1000) / (RESOLUTION))
#define UNIT_0_625_MS (625)
#define UNIT_10_MS    (10000)
#define BLE_MIN_CONN_INTERVAL        MSEC_TO_UNITS(12, UNIT_0_625_MS)
#define BLE_MAX_CONN_INTERVAL        MSEC_TO_UNITS(12, UNIT_0_625_MS)
#define BLE_SLAVE_LATENCY            0
#define BLE_CONN_SUP_TIMEOUT         MSEC_TO_UNITS(4000, UNIT_10_MS)
  #define MAX_TX_IN_PROGRESS         (6)
  #define MAX_TX_IN_PROGRESS         (10)
  #define GATT_MTU_SIZE_DEFAULT BLE_GATT_ATT_MTU_DEFAULT
#include "nrf_nvic.h"

int mp_bt_enable(void) {
    if (mp_bt_is_enabled()) {
        return 0;
    }

    // initialize our state
#if !NRF51
    bluetooth_adv_handle = BLE_GAP_ADV_SET_HANDLE_NOT_SET;
#endif

#if NRF51
  #if BLUETOOTH_LFCLK_RC
    uint32_t err_code = sd_softdevice_enable(NRF_CLOCK_LFCLKSRC_RC_250_PPM_250MS_CALIBRATION,
                                             softdevice_assert_handler);
  #else
    uint32_t err_code = sd_softdevice_enable(NRF_CLOCK_LFCLKSRC_XTAL_20_PPM,
                                             softdevice_assert_handler);
  #endif // BLUETOOTH_LFCLK_RC

#else // NRF52xxx
    uint32_t err_code = sd_softdevice_enable(&clock_config,
                                             softdevice_assert_handler);
#endif

    if (err_code != 0) { // sd_softdevice_enable
        return mp_bt_errno(err_code);
    }

    sd_nvic_EnableIRQ(SD_EVT_IRQn);

#if NRF51
    ble_enable_params_t ble_enable_params = {0};
    ble_enable_params.gatts_enable_params.attr_tab_size = BLE_GATTS_ATTR_TAB_SIZE_DEFAULT;
    ble_enable_params.gatts_enable_params.service_changed = 0;
    err_code = sd_ble_enable(&ble_enable_params);
#else
    uint32_t app_ram_start_cfg = 0x200039c0;
    err_code = sd_ble_enable(&app_ram_start_cfg); // 8K SD headroom from linker script.
#endif
    if (err_code != 0) { // sd_ble_enable
        return mp_bt_errno(err_code);
    }

    // set up security mode
    ble_gap_conn_sec_mode_t sec_mode;
    BLE_GAP_CONN_SEC_MODE_SET_OPEN(&sec_mode);

    if ((err_code = sd_ble_gap_device_name_set(&sec_mode,
                    ble_default_device_name,
                    sizeof(ble_default_device_name) - 1)) != 0) {
        return mp_bt_errno(err_code);
    }

    if ((err_code = sd_ble_gap_ppcp_set(&gap_conn_params)) != 0) {
        return mp_bt_errno(err_code);
    }

    return 0; // success
}

bool mp_bt_is_enabled(void) {
    uint8_t is_enabled;
    sd_softdevice_is_enabled(&is_enabled);
    return is_enabled != 0;
}

STATIC uint32_t mp_bt_advertise_start_internal(void) {
    ble_gap_adv_params_t adv_params;
    adv_params.type = bluetooth_adv_type;
    adv_params.p_peer_addr = NULL;
    adv_params.fp = BLE_GAP_ADV_FP_ANY; // no filter policy
    adv_params.interval = bluetooth_adv_interval;
    return sd_ble_gap_adv_start(&adv_params);
}

int mp_bt_advertise_start(mp_bt_adv_type_t type, uint16_t interval, const uint8_t *adv_data, size_t adv_data_len, const uint8_t *sr_data, size_t sr_data_len) {
    mp_bt_advertise_stop(); // restart if already started

#if NRF51
    sd_ble_gap_adv_data_set(adv_data, adv_data_len, sr_data, sr_data_len);
    bluetooth_adv_type = type;
    bluetooth_adv_interval = interval;
    uint32_t err_code = mp_bt_advertise_start_internal();
    return mp_bt_errno(err_code);

#elif NRF52
    if (adv_data_len > sizeof(bluetooth_adv_data) || sr_data_len > sizeof(bluetooth_sr_data)) {
        return MP_EINVAL;
    }
    if (adv_data_len) {
        memcpy(bluetooth_adv_data, adv_data, adv_data_len);
    }
    if (sr_data_len) {
        memcpy(bluetooth_sr_data, sr_data, sr_data_len);
    }

    ble_gap_adv_data_t ble_adv_data = {0};
    ble_adv_data.adv_data.p_data = bluetooth_adv_data;
    ble_adv_data.adv_data.len = adv_data_len;
    ble_adv_data.scan_rsp_data.p_data = bluetooth_sr_data;
    ble_adv_data.scan_rsp_data.len = sr_data_len;

    ble_gap_adv_params_t adv_params = {0};
    adv_params.properties.type       = type;
    adv_params.filter_policy         = BLE_GAP_ADV_FP_ANY; // no filter policy
    adv_params.interval              = interval;
    adv_params.max_adv_evts          = 0; // infinite advertisment
    adv_params.primary_phy           = BLE_GAP_PHY_AUTO;
    adv_params.secondary_phy         = BLE_GAP_PHY_AUTO;
    adv_params.scan_req_notification = 0; // Do not raise scan request notifications when scanned.

    uint32_t err_code = sd_ble_gap_adv_set_configure(&bluetooth_adv_handle, &ble_adv_data, &adv_params);
    if (err_code != 0) {
        return mp_bt_errno(err_code);
    }

    err_code = sd_ble_gap_adv_start(bluetooth_adv_handle, BLE_CONN_CFG_TAG_DEFAULT);
    return mp_bt_errno(err_code);
#endif
}

void mp_bt_advertise_stop(void) {
#if NRF51
    sd_ble_gap_adv_stop();
#else
    sd_ble_gap_adv_stop(bluetooth_adv_handle);
#endif
}

int mp_bt_add_service(mp_bt_service_t *service, size_t num_characteristics, mp_bt_characteristic_t **characteristics) {
    uint32_t err_code = sd_ble_gatts_service_add(BLE_GATTS_SRVC_TYPE_PRIMARY, &service->uuid, &service->handle);
    if (err_code != 0) {
        return mp_bt_errno(err_code);
    }

    // Add each characteristic.
    for (size_t i = 0; i < num_characteristics; i++) {
        mp_bt_characteristic_t *characteristic = characteristics[i];

        // Create characteristic metadata.
        ble_gatts_char_md_t char_md = {0};
        char_md.char_props.read = (characteristic->flags & MP_BLE_FLAG_READ) ? 1 : 0;
        char_md.char_props.write = (characteristic->flags & MP_BLE_FLAG_WRITE) ? 1 : 0;
        char_md.char_props.notify = (characteristic->flags & MP_BLE_FLAG_NOTIFY) ? 1 : 0;

        // Create attribute metadata.
        ble_gatts_attr_md_t attr_md = {0};
        attr_md.vlen = 1;
        attr_md.vloc = BLE_GATTS_VLOC_STACK;
        attr_md.rd_auth = 0;
        attr_md.wr_auth = 0;
        if (characteristic->flags & MP_BLE_FLAG_READ) {
            BLE_GAP_CONN_SEC_MODE_SET_OPEN(&attr_md.read_perm);
        }
        if (characteristic->flags & MP_BLE_FLAG_WRITE) {
            BLE_GAP_CONN_SEC_MODE_SET_OPEN(&attr_md.write_perm);
        }

        // Create characteristic value.
        ble_gatts_attr_t attr_char_value = {0};
        attr_char_value.p_uuid = &characteristic->uuid;
        attr_char_value.p_attr_md = &attr_md;
        attr_char_value.init_len = 0;
        attr_char_value.init_offs = 0;
        attr_char_value.max_len = MP_BT_MAX_ATTR_SIZE;
        attr_char_value.p_value = NULL;

        // Output handles.
        ble_gatts_char_handles_t handles;

        // BLE_GATT_HANDLE_INVALID: add to previously added service.
        uint32_t err_code = sd_ble_gatts_characteristic_add(BLE_GATT_HANDLE_INVALID, &char_md, &attr_char_value, &handles);
        if (err_code != 0) {
            return mp_bt_errno(err_code);
        }

        // Now that the characteristic has been added successfully to the
        // service, update the characteristic's service.
        // Note that the caller has already ensured that
        // characteristic->service is NULL.
        characteristic->service = service;
        characteristic->value_handle = handles.value_handle;
    }

    return 0;
}

int mp_bt_characteristic_value_set(mp_bt_characteristic_t *characteristic, const void *value, size_t value_len) {
    ble_gatts_value_t data = {0};
    data.len = value_len;
    data.offset = 0;
    data.p_value = (void*)value; // value is only read so we can discard const
    uint32_t err_code = sd_ble_gatts_value_set(BLE_CONN_HANDLE_INVALID, characteristic->value_handle, &data);
    return mp_bt_errno(err_code);
}

int mp_bt_characteristic_value_get(mp_bt_characteristic_t *characteristic, void *value, size_t *value_len) {
    ble_gatts_value_t data = {0};
    data.len = *value_len;
    data.offset = 0;
    data.p_value = value;
    uint32_t err_code = sd_ble_gatts_value_get(BLE_CONN_HANDLE_INVALID, characteristic->value_handle, &data);
    *value_len = data.len;
    return mp_bt_errno(err_code);
}

void mp_bt_parse_uuid(mp_obj_t obj, mp_bt_uuid_t *uuid) {
    if (MP_OBJ_IS_SMALL_INT(obj) && MP_OBJ_SMALL_INT_VALUE(obj) == (uint32_t)(uint16_t)MP_OBJ_SMALL_INT_VALUE(obj)) {
        // Integer fits inside 16 bits.
        uuid->type = BLE_UUID_TYPE_BLE;
        uuid->uuid = MP_OBJ_SMALL_INT_VALUE(obj);
    } else if (mp_obj_is_str(obj)) {
        // Guessing this is a 128-bit (proprietary) UUID.
        ble_uuid128_t buf;
        mp_bt_parse_uuid_str(obj, &buf.uuid128[0]);
        uint32_t err_code = sd_ble_uuid_vs_add(&buf, &uuid->type);
        if (err_code != 0) {
            mp_raise_OSError(mp_bt_errno(err_code));
        }
        uuid->uuid = (uint16_t)(buf.uuid128[12]) | ((uint16_t)(buf.uuid128[13]) << 8);
    } else {
        mp_raise_ValueError("cannot parse UUID");
    }
}

mp_obj_t mp_bt_format_uuid(mp_bt_uuid_t *uuid) {
    uint8_t raw[16];
    uint8_t raw_len;
    if (sd_ble_uuid_encode(uuid, &raw_len, raw) != 0) {
        return mp_const_none;
    }
    switch (raw_len) {
    case 2:
        return MP_OBJ_NEW_SMALL_INT((int)(raw[0]) | ((int)(raw[1]) << 8));
    case 16:
        return mp_bt_format_uuid_str(raw);
    default:
        return mp_const_none;
    }
}
